--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <picture>
           <source srcset="images\image-product-mobile.jpg" media="(max-width: 375px)">
-          <img src="images/image-product-desktop.jpg" alt="">
+          <img src="images/image-product-desktop.jpg" alt="a picture of perfume bottle with two green leafs on the top and bottom">
         </picture>
       <div class="content">
         <p class="category">Perfume</p>
@@ -23,7 +23,9 @@
         </p>
         <div class="price-group">
           <p class="price">$149.99</p>
-          <p class="old-price">$169.99</p>
+          <del class="sr-only">
+            <p class="old-price">$169.99</p>
+          </del>
         </div>
         <button class="button" data-icon="shopping-cart">Add to Cart</button>
       </div>
